think im getting closer...check for the gap fix

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1637,9 +1637,9 @@ html, body{
 
 .skybox{
   flex-shrink: 0;
-  top: 0;
+  top: 20vh;
   width: 100vw;
-  height: 180vh;
+  height: 140vh;
   overflow: hidden;
   background: linear-gradient(180deg, rgba(23,0,74,0.7) 0%, rgba(37,0,99,0.4) 14%, rgba(85, 0, 124, 0) 40%,rgba(255, 0, 179, 0.3) 80%, rgba(215, 79, 95, 0.6) 95%, rgba(255, 195, 91, 0.7) 100%);
   opacity: 0;
